<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddActivity">
    <TextView
        android:id="@+id/textViewName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/gName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBaseline_toBaselineOf="@+id/editTextName" />

    <TextView
        android:id="@+id/textViewFD"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/firstDay"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextName" />

    <TextView
        android:id="@+id/textViewD1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/d1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextFD" />
    <Spinner
        android:id="@+id/spinnerD1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:prompt="@string/spinnerTitle1"
        app:layout_constraintTop_toBottomOf="@+id/textViewD1"
        />

    <TextView
        android:id="@+id/textViewD2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/d2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerD1" />
    <Spinner
        android:id="@+id/spinnerD2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:prompt="@string/spinnerTitle2"
        app:layout_constraintTop_toBottomOf="@+id/textViewD2"
        />

    <EditText
        android:id="@+id/editTextName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:inputType="textPersonName"
        android:text="Name"
        app:layout_constraintStart_toEndOf="@+id/textViewName"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/editTextFD"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:clickable="true"
        android:text="01-01-2020"
        android:textColor="@android:color/black"
        app:backgroundTint="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewFD" />

    <View
        android:id="@+id/view2"
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:background="#c2c2c2"
        android:clickable="false"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerD2" />

    <ImageView
        android:id="@+id/imgDel"
        android:layout_width="42dp"
        android:layout_height="42dp"
        android:layout_marginTop="16dp"
        android:onClick="onButBarClick"
        app:layout_constraintTop_toBottomOf="@+id/view2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/imgSave"
        android:src="@drawable/ic_v_del" />

    <ImageView
        android:id="@+id/imgSave"
        android:layout_width="40dp"
        android:layout_height="42dp"
        android:layout_marginTop="16dp"
        android:onClick="onButBarClick"
        android:src="@drawable/ic_v_save"
        app:layout_constraintLeft_toRightOf="@+id/imgDel"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view2" />

    <com.google.android.gms.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        ads:adSize="BANNER"
        ads:adUnitId="ca-app-pub-5155761403306761/5570833130">
    </com.google.android.gms.ads.AdView>

    <ImageView
        android:id="@+id/imgInfo"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginBottom="8dp"
        android:onClick="onButBarClick"
        android:src="@drawable/ic_v_info"
        app:layout_constraintBottom_toTopOf="@+id/adView"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/imgCalendar" />
    <ImageView
        android:id="@+id/imgCalendar"
        android:layout_width="42dp"
        android:layout_height="42dp"
        android:layout_marginBottom="8dp"
        android:onClick="onButBarClick"
        app:layout_constraintBottom_toTopOf="@+id/adView"
        app:layout_constraintLeft_toRightOf="@+id/imgInfo"
        app:layout_constraintRight_toLeftOf="@+id/imgAdd"
        android:src="@drawable/ic_v_calendar" />
    <ImageView
        android:id="@+id/imgAdd"
        android:layout_width="42dp"
        android:layout_height="42dp"
        android:layout_marginBottom="8dp"
        android:onClick="onButBarClick"
        app:layout_constraintBottom_toTopOf="@+id/adView"
        app:layout_constraintLeft_toRightOf="@+id/imgCalendar"
        app:layout_constraintRight_toLeftOf="@+id/imgEdit"
        android:src="@drawable/ic_v_add_selected" />
    <ImageView
        android:id="@+id/imgEdit"
        android:layout_width="40dp"
        android:layout_height="42dp"
        android:layout_marginBottom="8dp"
        android:onClick="onButBarClick"
        app:layout_constraintBottom_toTopOf="@+id/adView"
        app:layout_constraintLeft_toRightOf="@+id/imgAdd"
        app:layout_constraintRight_toRightOf="parent"
        android:src="@drawable/ic_v_edit" />

</androidx.constraintlayout.widget.ConstraintLayout>